maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:17: error: not found: type sommeAngle
def keepHandOnSideWall(Int : sommeAngle) : Int = {
                             ^PledgeMaze:27: error: not found: type Bolean
def isDirectionFree(Direction : dir) : Bolean = {
                                       ^PledgeMaze:27: error: not found: type dir
def isDirectionFree(Direction : dir) : Bolean = {
                                ^PledgeMaze:19: error: not found: value sommeAngle
  sommeAngle+=1
  ^PledgeMaze:22: error: not found: value sommeAngle
    sommeAngle-=1
    ^PledgeMaze:24: error: type mismatch;
 found   : Unit
 required: Int
  avance()
        ^PledgeMaze:28: error: not found: value dir
  setDirection(dir)
               ^